change localhost url to heroku url for production

--- a/app/assets/stylesheets/banner.css
+++ b/app/assets/stylesheets/banner.css
@@ -2,7 +2,7 @@
 	height: 500px;
 	width: 100%;
 	background-size: 100% auto;
-	background-image: url("http://localhost:3000/imgs/aeroplan-banner.png");
+	background-image: url("http://beyondmiles.herokuapp.com/imgs/aeroplan-banner.png");
 	background-repeat: no-repeat;
 	margin-bottom: 25px;
 }
