--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
 
 			<!-- SWB Logo -->
 			<%= link_to(root_path, class: "navbar-brand") do %>
-				<img id="swb-logo" alt="swb" src="http://localhost:3000/imgs/swb-logo.png">
+				<img id="swb-logo" alt="swb" src="http://beyondmiles.herokuapp.com/imgs/swb-logo.png">
 			<% end %>
 		</div>
 
