add aeroplan link to donate buttons

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -7,7 +7,9 @@
 				Your Aeroplan Miles fuel the most dynamic learning initiatives around the world!
 				<br>Click below to see how your donations take Learning Beyond Miles.
 			</h3>
-      <button type="button" class="btn" id="btn-donate">DONATE TODAY</button>
+      <a href="https://beyondmiles.aeroplan.com/eng/partners/11" target="blank">
+      	<button type="button" class="btn" id="btn-donate">DONATE TODAY</button>
+      </a>
 		</div>
 	</div>
 
