link aeroplan banner to donation page, add aeroplan reg tm, add aeroplan links, emphasize about text

--- a/app/assets/stylesheets/beyondmiles.css
+++ b/app/assets/stylesheets/beyondmiles.css
@@ -15,8 +15,13 @@
 }
 
 p {
-	font-family: 'Nixie One', cursive;
+	font-family: 'Raleway', sans-serif;
 	font-size: 16px;
+}
+
+p span {
+	color: #54B2A4;
+	font-weight: 800px;
 }
 
 .content {
