--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -6,10 +6,10 @@
 	<div class="row text-center">
 		<div class="col-md-8 col-md-offset-2">
 			<p>
-				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. The results: life-changing experiences that build a just, sustainable and thriving world.
+				SWB + Aeroplan’s<sup>®</sup> Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. <span>The results: life-changing experiences that build a just, sustainable and thriving world.</span>
 			</p>
 			<p>
-				Since the launch of Beyond Miles in 2006, SWB has raised an impressive 12 million Aeroplan miles and fueled over 100 projects, positively impacting 20,000+ people in 50+ countries. The numbers only begin to tell the story.
+				Since the launch of Beyond Miles in 2006, SWB has raised an impressive <span>12 million</span> Aeroplan<sup>®</sup> miles and fueled over 100 projects, positively <span>impacting 20,000+ people in 50+ countries</span>. The numbers only begin to tell the story.
 			</p>
 		</div>
 
