--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,15 +1,22 @@
-<div class="aeroplan-banner banner"></div>
+<%= link_to("https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank") do %>
+	<div class="aeroplan-banner banner"></div>
+<% end %>
 
 <div class="container orgs-grid">
 	<div class="row donate-today">
 		<div class="col-md-12 text-center">
 			<h3>
-				Your Aeroplan Miles fuel the most dynamic learning initiatives around the world!
-				<br>Click below to see how your donations take Learning Beyond Miles.
+				Your
+				<%= link_to("https://www.aeroplan.com", class: "aeroplan-link", target: "blank") do %>
+				Aeroplan<sup>®</sup>
+				<% end %>
+				Miles fuel the most dynamic learning initiatives around the world!
+				<br>
+				Click below to see how your donations take Learning Beyond Miles.
 			</h3>
-      <a href="https://beyondmiles.aeroplan.com/eng/partners/11" target="blank">
+      <%= link_to("https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank") do %>
       	<button type="button" class="btn" id="btn-donate">DONATE TODAY</button>
-      </a>
+      <% end %>
 		</div>
 	</div>
 
