--- a/app/views/beyondmiles/about.html.erb
+++ b/app/views/beyondmiles/about.html.erb
@@ -15,13 +15,13 @@
 
 		<div class="row">
 			<div class="content col-md-12">
-				<%= link_to("http://www.facebook.com", target: "blank") do %>
+				<%= link_to("https://www.facebook.com/swbca", target: "blank") do %>
 					<i class="fa fa-facebook fa-2x"></i>
 				<% end %>
-				<%= link_to("http://www.twitter.com", target: "blank") do %>
+				<%= link_to("https://twitter.com/tweetswb", target: "blank") do %>
 					<i class="fa fa-twitter fa-2x"></i>
 				<% end %>
-				<%= link_to("http://www.instagram.com", target: "blank") do %>
+				<%= link_to("https://instagram.com/schoolswithoutborders", target: "blank") do %>
 					<i class="fa fa-instagram fa-2x"></i>
 				<% end %>
 			</div>
