--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -14,6 +14,9 @@
 	<div class="row">
 		<div class="content col-sm-6 col-md-8 col-md-offset-2 text-center">
 			<p><%= @organization.description %></p>
+			<p><span>Miles Usage:</span>
+				<%= @organization.miles_description %>
+			</p>
 			<p>Learn More:
 				<%= link_to(@organization.website, target: "blank") do %>
 					<%= @organization.website %>
