--- a/app/assets/stylesheets/banner.css
+++ b/app/assets/stylesheets/banner.css
@@ -4,12 +4,15 @@
 	background-size: 100% auto;
 	background-image: url("http://beyondmiles.herokuapp.com/imgs/aeroplan-banner.png");
 	background-repeat: no-repeat;
-	margin-bottom: 10px;
+	/*margin-bottom: 10px;*/
 }
 
 @media(max-width: 766px){
 	.aeroplan-banner { 
-		height: 100px;
+		height: 200px;
+	}
+	h3 {
+		font-size: 10px;
 	}
 }
 
