--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -10,16 +10,21 @@
 				<%= link_to("https://www.aeroplan.com", class: "aeroplan-link", target: "blank") do %>
 				Aeroplan<sup>®</sup>
 				<% end %>
-				Miles fuel the most dynamic learning initiatives around the world!
-				<br>
-				Click below to see how your donations take Learning Beyond Miles.
+				Miles help us take flight!
 			</h3>
+
       <%= link_to("https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank") do %>
       	<button type="button" class="btn" id="btn-donate">DONATE TODAY</button>
       <% end %>
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<h3>Click below to see your Aeroplan Miles in action.</h3>
+		</div>
+	</div>
+	
 	<div class="row seven-cols">
 		<% @organizations.each do |org| %>
 			<div class="org-info col-md-1 thumbnail text-center" id="org-thumbnail">
