--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -39,4 +39,9 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="content col-md-8 col-md-offset-2 text-center">
+			<%= render 'layouts/donate' %>
+		</div>
+	</div>
 </div>
