reposition miles usage blurb

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -14,9 +14,6 @@
 	<div class="row">
 		<div class="content col-md-8 col-md-offset-2 text-center">
 			<p><%= @organization.description %></p>
-			<p><span>Miles Usage:</span>
-				<%= @organization.miles_description %>
-			</p>
 			<p>Learn More:
 				<%= link_to(@organization.website, target: "blank") do %>
 					<%= @organization.website %>
@@ -26,7 +23,7 @@
 	</div>
 
 	<div class="row">
-		<div class="content social-media col-md-8 col-md-offset-2 text-center">
+		<div class="social-media col-md-8 col-md-offset-2 text-center">
 			<%= link_to(@organization.facebook, target: "blank") do %>
 				<i class="fa fa-facebook fa-2x"></i>
 			<% end %>
@@ -36,6 +33,16 @@
 			<%= link_to(@organization.instagram, target: "blank") do %>
 				<i class="fa fa-instagram fa-2x"></i>
 			<% end %>
+		</div>
+	</div>
+
+	<hr>
+	
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 text-center">
+			<p>
+				<%= @organization.miles_description %>
+			</p>
 		</div>
 	</div>
 
