--- a/app/assets/stylesheets/organizations.css
+++ b/app/assets/stylesheets/organizations.css
@@ -130,3 +130,9 @@ i.not-avail {
 .orgs-header {
 	margin-bottom: 7px;
 }
+
+#org-logo {
+	width: 150px;
+	margin-right: 20px;
+	display: inline;
+}
