--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,8 +1,9 @@
 footer {
-	margin-top: 75px;
+	/*margin-top: 75px;*/
 	padding-top: 18px;
-  background-color: #D1D2D4;
+  background-color: #333;
   font-family: 'Oswald', sans-serif;
+  color: white;
 }
 
 footer p {
