--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 		
 	</div>
 
-	<%= render 'layouts/socialmedia' %>
+	<%#= render 'layouts/socialmedia' %>
 	<%= render 'layouts/footer' %>
 
   <!-- Bootstrap CDN Script -->
