--- a/app/views/layouts/_socialmedia.html.erb
+++ b/app/views/layouts/_socialmedia.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid social-media">
+<div class="container-fluid share">
 	<div class="mail-chimp">
 		<div class="row">
 			<div class="col-md-12 text-center">
