change aeroplan logo url to heroku url

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -15,7 +15,7 @@
 	<div class="row">
 		<div class="col-md-12 text-center donate-logos">
 	    <img alt="swb-logo" src="https://beyondmiles.herokuapp.com/imgs/swb-logo.png">
-	    <img alt="swb-logo" src="http://localhost:3000/imgs/aeroplan-logo.png">
+	    <img alt="swb-logo" src="http://beyondmiles.herokuapp.com/imgs/aeroplan-logo.png">
 	  </div>
 	</div>
 
