--- a/app/views/layouts/_socialmedia.html.erb
+++ b/app/views/layouts/_socialmedia.html.erb
@@ -1,23 +1,33 @@
 <div class="container-fluid share">
 	<div class="mail-chimp">
 		<div class="row">
-			<div class="col-md-12 text-center">
+			<div class="col-md-6 text-center">
 				<h4>Join SWB and these 21 Partners for 21 Days of Learning in October.</h4>
+
 				<!-- Begin MailChimp Signup Form -->
-				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-				<div id="mc_embed_signup text-center">
-					<form action="//swb.us2.list-manage.com/subscribe/post?u=0a19cdfa7095b44d377c0311a&amp;id=6207122c41" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					    <div id="mc_embed_signup_scroll">
-						<label for="mce-EMAIL">Sign up here:</label>
-						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;"><input type="text" name="b_0a19cdfa7095b44d377c0311a_6207122c41" tabindex="-1" value=""></div>
-					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn mail-chimp-btn"></div>
-					    </div>
+				<div id="mc_embed_signup">
+					<form action="//swb.us2.list-manage.com/subscribe/post?u=0a19cdfa7095b44d377c0311a&amp;id=dce7740b0b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				    <div id="mc_embed_signup_scroll">
+
+							<!-- <div class="indicates-required"><span class="asterisk">*</span> indicates required</div> -->
+								<div class="mc-field-group">
+									<!-- <label for="mce-EMAIL">Email Address<span class="asterisk">*</span></label> -->
+									<input type="email" value="" name="EMAIL" class="required email form-mailchimp" id="mce-EMAIL">
+									<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-mailchimp">
+								</div>
+
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    
+						    <div style="position: absolute; left: -5000px;"><input type="text" name="b_0a19cdfa7095b44d377c0311a_dce7740b0b" tabindex="-1" value=""></div>
+						    
+						    <!-- <div class="clear"><input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-mailchimp"></div> -->
+				    </div>
 					</form>
 				</div>
 				<!--End mc_embed_signup-->
-			</div>
 		</div>
 	</div>
 
