format social media links

--- a/app/views/layouts/_mailchimp.html.erb
+++ b/app/views/layouts/_mailchimp.html.erb
@@ -1,4 +1,4 @@
-<div class="mail-chimp">
+<div class="mailchimp">
 	<div class="row">
 		<div class="col-md-12 text-center">
 			<h4>Join SWB and these 21 Partners for 21 Days of Learning in October.</h4>
@@ -25,5 +25,6 @@
 				</form>
 			</div>
 			<!--End mc_embed_signup-->
+		</div>
 	</div>
 </div>
