--- a/app/assets/stylesheets/socialmedia.css
+++ b/app/assets/stylesheets/socialmedia.css
@@ -1,20 +1,8 @@
-.share {
-	background-color: #F8F8F8;
-	height: 250px;
-	margin-top: 75px;
+.socialmedia h4 {
+	display: inline-block;
+	color: #555;
 }
 
-.btn-mailchimp {
-	border-radius: 0px;
-	background-color: #C28B2E;
-	color: #FFF;
-	font-family: 'Oswald', sans-serif;
-}
-
-.form-mailchimp {
-	padding: 3px 35px 7.5px 35px;
-	border: 1px solid #CCC;
-	border-radius: 4px;
-	font-size: 14px;
-	font-family: 'Oswald', sans-serif;
+.sm-link {
+	margin-bottom: 5px;
 }
