--- a/app/views/layouts/_socialmedia.html.erb
+++ b/app/views/layouts/_socialmedia.html.erb
@@ -1,9 +1,15 @@
-<div class="container-fluid share">
+<div class="socialmedia">
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="button"></div>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beyondmiles.swb.ca/" data-text="Help #swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them:" data-count="none">Tweet</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+			<h4>Share the buzz today!</h4>
+			<div class="sm-link">
+				<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="button"></div>
+			</div>
+
+			<div class="sm-link">
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beyondmiles.swb.ca/" data-text="Help #swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them:" data-count="none">Tweet</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+			</div>
 		</div>
 	</div>
 </div>
