comment out share buttons on bottom of page

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -47,6 +47,6 @@
 	</div>
 
 	<%= render 'layouts/mailchimp' %>
-	<%= render 'layouts/socialmedia' %>
+	<%#= render 'layouts/socialmedia' %>
 
 </div>
