--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,20 +33,22 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					<%= link_to "DONATE", "https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank" %>
+					<!-- <button type="button" class="btn btn-default navbar-btn">DONATE</button> -->
 				</li>
-				<li class="dropdown">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SHARE<span class="caret"></span></a>
-				  <ul class="dropdown-menu sm-dropdown">
-				    <li class="text-center">
-				    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="button"></div>
+				<!-- <li class="dropdown"> -->
+				  <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SHARE<span class="caret"></span></a> -->
+				  <!-- <ul class="dropdown-menu sm-dropdown"> -->
+				    <!-- <li role="separator" class="divider"></li> -->
+				    <li class="sm-link">
+				    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="icon"></div>
+				    	SHARE
 				    </li>
-				    <li role="separator" class="divider"></li>
-				    <li class="text-center">
-				    	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beyondmiles.swb.ca/" data-text="Help #swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them:" data-count="none">Tweet</a>
-				    	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				    <li class="sm-link">
+				    	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beyondmiles.swb.ca/" data-text="Help #swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them:" data-count="none"></a>
+				    	TWEET
 				    </li>
-				  </ul>
-				</li>
+				  <!-- </ul> -->
+				<!-- </li> -->
 			</ul>
 		</div>
 	</div>
