style share links directly on nav bar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,12 +40,10 @@
 				  <!-- <ul class="dropdown-menu sm-dropdown"> -->
 				    <!-- <li role="separator" class="divider"></li> -->
 				    <li class="sm-link">
-				    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="icon"></div>
-				    	SHARE
+				    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="button"></div>
 				    </li>
 				    <li class="sm-link">
 				    	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beyondmiles.swb.ca/" data-text="Help #swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them:" data-count="none"></a>
-				    	TWEET
 				    </li>
 				  <!-- </ul> -->
 				<!-- </li> -->
