--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -10,6 +10,6 @@ nav {
 li.sm-link {
 	margin-right: 5px;
 	padding-top: 15px;
-	/*opacity: 0.8;*/
-	color: #777;
+	opacity: 0.7;
+	/*color: #777;*/
 }
