modify styling for share buttons

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,34 +33,17 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					<%= link_to "DONATE", "https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank" %>
-					<!-- <button type="button" class="btn btn-default navbar-btn">DONATE</button> -->
 				</li>
-				<!-- <li class="dropdown"> -->
-				  <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SHARE<span class="caret"></span></a> -->
-				  <!-- <ul class="dropdown-menu sm-dropdown"> -->
-				    <!-- <li role="separator" class="divider"></li> -->
-				    <li class="sm-link">
-				    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="button"></div>
-				    </li>
-				    <li class="sm-link">
-				    	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beyondmiles.swb.ca/" data-text="Help #swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them:" data-count="none"></a>
-				    </li>
-				  <!-- </ul> -->
-				<!-- </li> -->
+			    <li class="fb-link">
+			    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="icon"></div>
+			    	SHARE
+			    </li>
+			    <li class="tw-link">
+			    	<a href="https://twitter.com/intent/tweet?text=Help&hashtags=swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them: http://beyondmiles.swb.ca">
+			    		<i class="fa fa-twitter fa-1x"></i>TWEET
+			    	</a>
+			    </li>
 			</ul>
 		</div>
 	</div>
 </nav>
-
-
-
-<!-- <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-  <ul class="dropdown-menu">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</li> -->
