--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -7,9 +7,12 @@ nav {
 	width: 40px;
 }
 
-li.sm-link {
-	margin-right: 5px;
+li.fb-link {
 	padding-top: 15px;
-	opacity: 0.7;
-	/*color: #777;*/
+	color: #777;
+}
+
+li.tw-link i {
+	padding: 0px;
+	color: #55ACEE;
 }
