--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,15 +34,15 @@
 				<li>
 					<%= link_to "DONATE", "https://beyondmiles.aeroplan.com/eng/partners/11", target: "blank" %>
 				</li>
-			    <li class="fb-link">
-			    	<div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="icon"></div>
-			    	SHARE
-			    </li>
-			    <li class="tw-link">
-			    	<a href="https://twitter.com/intent/tweet?text=Help&hashtags=swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them: http://beyondmiles.swb.ca">
-			    		<i class="fa fa-twitter fa-1x"></i>TWEET
-			    	</a>
-			    </li>
+		    <li class="fb-link">
+		    	<a><div class="fb-share-button" data-href="http://beyondmiles.swb.ca/" data-layout="icon"></div>
+		    	SHARE</a>
+		    </li>
+		    <li class="tw-link">
+		    	<a href="https://twitter.com/intent/tweet?text=Help&hashtags=swbees take flight! Donate your @aeroplan miles this week to @tweetswb and @beyondmiles will match them: http://beyondmiles.swb.ca">
+		    		<i class="fa fa-twitter fa-1x"></i>TWEET
+		    	</a>
+		    </li>
 			</ul>
 		</div>
 	</div>
