--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,6 @@
 	<!-- Bootstrap Rendering/Touch Zooming -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Tweet Button -->
-	<script>
-		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-	</script>
 </head>
 
 <body>
@@ -46,6 +42,12 @@
 		}(document, 'script', 'facebook-jssdk'));
 	</script>
 	<!-- End FB Script -->
+
+	<!-- Tweet Script -->
+	<script>
+		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+	</script>
+	<!-- End Tweet Script -->
 
 	<%= render 'layouts/navbar' %>
 	
