--- a/app/views/beyondmiles/contact.html.erb
+++ b/app/views/beyondmiles/contact.html.erb
@@ -18,7 +18,7 @@
 				M5T 1A1
 			</p>
 
-			<a href="mailto:info@swb.ca?subject=Aeroplan%20Miles%20Campaign%20Inquiry" role="button" class="btn" id="btn-contact">EMAIL SWB</a>
+			<a href="mailto:info@swb.ca?subject=SWB%20Learning%20Beyond%20Miles" role="button" class="btn" id="btn-contact">EMAIL SWB</a>
 
 		</div>
 	</div>
