--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,6 @@
 
   <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-  <!-- <link href='http://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'> -->
   
   <!-- Bootstrap CDN -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
@@ -29,6 +28,12 @@
 	</script>
 	<!-- End Google Tag Manager -->
 	
+	<!-- FB -->
+	<meta property="og:url"          content="http://beyondmiles.swb.ca/" />
+	<meta property="og:type"         content="website" />
+	<meta property="og:title"        content="SWB Learning Beyond Miles" />
+	<meta property="og:description"  content="How much does culture influence creative thinking?" />
+	<meta property="og:image"        content="http://beyondmiles.herokuapp.com/imgs/aeroplan-banner.png" />
 </head>
 
 <body>
