edit meta tag description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 	<meta property="og:url"          content="http://beyondmiles.swb.ca/" />
 	<meta property="og:type"         content="website" />
 	<meta property="og:title"        content="SWB Learning Beyond Miles" />
-	<meta property="og:description"  content="How much does culture influence creative thinking?" />
+	<meta property="og:description"  content="Help swbees take flight! Donate your Aeroplan miles this week to Schools Without Borders and Beyond Miles will match them!" />
 	<meta property="og:image"        content="http://beyondmiles.herokuapp.com/imgs/aeroplan-banner.png" />
 </head>
 
