refactor class attributes with dot notation

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,5 @@
-%footer{class: "footer"}
-	%div{class: "container"}
+%footer.footer
+	%div.container
 		%p
 			©2015 by Schools Without Borders
 			%br
