finish converting about view to haml, fix bug (vid links not showing up on small screen)

--- a/app/views/beyondmiles/about.html.haml
+++ b/app/views/beyondmiles/about.html.haml
@@ -19,54 +19,20 @@
 				= link_to("https://instagram.com/schoolswithoutborders", target: "blank") do
 					%i.fa.fa-instagram.fa-2x
 
-/ <div class="page-banner about text-center">
-/ 	<h2>ABOUT LEARNING BEYOND MILES</h2>
-/ </div>
+		%div.col-md-8.col-md-offset-2.hidden-xs.text-center
+			%iframe.embed-responsive-item{src: "//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933", height: "331", width: "550", allowfullscreen: "", frameborder: "0"}
+		%div.col-md-8.col-md-offset-2.hidden-xs.text-center
+			%a{href: "http://vimeo.com/38347305"} Make Your Miles Matter
+			from
+			%a{href: "http://vimeo.com/goldennugget"} Golden Nugget Productions
+			on
+			%a{href: "https://vimeo.com"} Vimeo
 
-/ <div class="container">
-/ 	<div class="row text-center">
-/ 		<div class="col-md-8 col-md-offset-2">
-/ 			<p>
-/ 				SWB + Aeroplan’s Beyond Miles program has been a catalyst for prolific young leaders around the world to connect face-to-face and cross-pollinate some of the most brilliant learning strategies on the planet. <span>The results: life-changing experiences that build a just, sustainable and thriving world.</span>
-/ 			</p>
-/ 			<p>
-/ 				Since the launch of Beyond Miles in 2006, SWB has raised an impressive <span>12 million</span> Aeroplan<sup>®</sup> Miles and fueled over 100 projects, positively <span>impacting 20,000+ people in 50+ countries</span>. The numbers only begin to tell the story.
-/ 			</p>
-/ 		</div>
-
-/ 		<div class="row">
-/ 			<div class="content col-md-12">
-/ 				<%= link_to("https://www.facebook.com/swbca", target: "blank") do %>
-/ 					<i class="fa fa-facebook fa-2x"></i>
-/ 				<% end %>
-/ 				<%= link_to("https://twitter.com/tweetswb", target: "blank") do %>
-/ 					<i class="fa fa-twitter fa-2x"></i>
-/ 				<% end %>
-/ 				<%= link_to("https://instagram.com/schoolswithoutborders", target: "blank") do %>
-/ 					<i class="fa fa-instagram fa-2x"></i>
-/ 				<% end %>
-/ 			</div>
-/ 		</div>
-
-
-/ 		<div class="col-md-8 col-md-offset-2 hidden-xs text-center">
-/ 			<iframe class="embed-responsive-item" src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
-/ 			<div>
-/ 				<a href="http://vimeo.com/38347305">Make Your Miles Matter</a>
-/ 				from
-/ 				<a href="http://vimeo.com/goldennugget">Golden Nugget Productions</a>
-/ 				on
-/ 				<a href="https://vimeo.com">Vimeo</a>
-/ 			</div>
-/ 		</div>
-
-/ 		<div class="col-xs-12 embed-responsive embed-responsive-4by3 visible-xs">
-/ 				<iframe class="embed-responsive-item" src="//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933" height="331" width="550" allowfullscreen="" frameborder="0"></iframe>
-/ 				<a href="http://vimeo.com/38347305">Make Your Miles Matter</a>
-/ 				from
-/ 				<a href="http://vimeo.com/goldennugget">Golden Nugget Productions</a>
-/ 				on
-/ 				<a href="https://vimeo.com">Vimeo</a>
-/ 		</div>
-/ 	</div>	
-/ </div>
+		%div.col-xs-12.embed-responsive.embed-responsive-4by3.visible-xs
+			%iframe.embed-responsive-item{src: "//player.vimeo.com/video/38347305?byline=0&amp;portrait=0&amp;color=ff9933", height: "331", width: "550", allowfullscreen: "", frameborder: "0"}
+		%div.col-xs-12.embed-responsive.embed-responsive-4by3.visible-xs
+			%a{href: "http://vimeo.com/38347305"} Make Your Miles Matter
+			from
+			%a{href: "http://vimeo.com/goldennugget"} Golden Nugget Productions
+			on
+			%a{href: "https://vimeo.com"} Vimeo
