convert application.erb to haml

--- a/app/views/layouts/_mailchimp.html.haml
+++ b/app/views/layouts/_mailchimp.html.haml
@@ -3,6 +3,7 @@
 		%div.col-md-12.text-center
 			%h4 Join SWB and these 21 Partners for 21 Days of Learning in October.
 
+			-# Begin MailChimp Signup Form
 			%div#mc_embed_signup
 				%form.validate#mc-embedded-subscribe-form{action: "//swb.us2.list-manage.com/subscribe/post?u=0a19cdfa7095b44d377c0311a&amp;id=dce7740b0b", method: "post", name: "mc-embedded-subscribe-form", target: "_blank", novalidate: ""}
 				
@@ -17,3 +18,4 @@
 
 						%div{style: "position: absolute; left: -5000px;"}
 							%input{type: "text", name: "b_0a19cdfa7095b44d377c0311a_dce7740b0b", tabindex: "-1", value: ""}
+			-# End MailChimp Signup Form
