--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -3,8 +3,8 @@ footer {
 	padding-top: 18px;
   background-color: #D1D2D4;
   font-family: 'Oswald', sans-serif;
-}
 
-footer p {
-	font-size: 12px;
+  p {
+		font-size: 12px;
+  }
 }
