--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -2,7 +2,7 @@ footer {
 	margin-top: 75px;
 	padding-top: 18px;
   background-color: #D1D2D4;
-  font-family: 'Oswald', sans-serif;
+  font-family: $oswald;
 
   p {
 		font-size: 12px;
