--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -83,7 +83,7 @@ a:hover.aeroplan-link {
 }
 
 p.org-hq {
-	font-family: 'Oswald', sans-serif;
+	font-family: $oswald;
 	font-size: 12px;
 	color: #555;
 }
