add @extend for button, nest donate button hover

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,12 @@ $oswald: 'Oswald', sans-serif;
   margin-bottom: 35px;
 }
 
+.button {
+  background-color: $teal;
+  color: #FFF;
+  border-radius: 0px;
+}
+
 p {
   font-family: $raleway;
   font-size: 16px;
