move .content css to main file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,10 @@ a:hover {
   text-decoration: none;
 }
 
+.content {
+  margin-bottom: 25px
+}
+
 @import "banner";
 @import "beyondmiles";
 @import "footer";
